@@ -1,3 +1,9 @@
+2001-08-12  Martin Baulig  <baulig@suse.de>
+
+	* main.c: Put in some protection so that panel won't start up
+	unless explicitly told to - so it won't ruin your desktop if you
+	accidentally start it.
+
 2001-08-11  Martin Baulig  <baulig@suse.de>
 
 	* Makefile.am: Renamed the `panel-temp' target back to `panel'.
